# local-agentops

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  normalizer.py  scheduler.py
backend/app/capture/: base.py  ccusage.py  codex.py
backend/app/routers/: dashboard.py  health.py  recommendations.py  sessions.py  snapshots.py  usage.py
backend/app/services/: dashboard.py  health.py  providers.py  recommendations.py  reconciler.py  reconciler_state.py  sessions.py  snapshots.py  status.py  usage.py  usage_reports.py  websocket.py
backend/tests/: conftest.py  test_api.py  test_ccusage_source.py  test_codex_source.py  test_extra_endpoints.py  test_health.py  test_multiprovider_dashboard.py  test_normalizer.py  test_provider_migration.py  test_recommendations.py  test_reconciler.py  test_session_idle.py  test_sessions.py  test_status.py  test_switch_provider.py  test_usage.py  test_usage_reports.py  test_workday.py
backend/tests/fixtures/: ccusage_blocks.json  statusline_real.json
deploy/launchd/: com.localagentops.backend.plist.template  install.sh
docs/: API_CONTRACT.md  INSTALL.md
frontend/: README.md  dashboard.example.json
frontend/public/: index.html
hook/: statusline-hook.sh
