[project]
name = "local-agentops-backend"
version = "0.1.0"
description = "Local AgentOps — backend (Claude Code MVP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI usa `Depends()` en los defaults de los parámetros a propósito.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # starlette>=1.3 avisa de la futura migración a httpx2 en su TestClient; es una
    # deprecación de tercera parte que no podemos accionar sin cambiar el transporte.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
